--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
 body{background-color:#DE006F ;}
+
+button{ 
+    background-color:#a342d7ff;
+    color: #FFFFFF;
+  
+    font-size: 30px;
+    margin: 10px;
+    padding: 20px;
+    border: 3px dashed #000000ff;
+    border-radius: 30px;
+
+}
+
+input{
+    background-color:#a342d7ff;
+    color: #FFFFFF;
+    text-shadow: 2px 2px 40px#FFB6C1;
+    font-size: 30px;
+    margin: 10px;
+    padding: 20px;
+    border: 3px dashed #000000ff;
+    border-radius: 30px;
+}
