--- a/style.css
+++ b/style.css
@@ -1,24 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 body{background-color:#DE006F ;}
 
 button{ 
     background-color:#a342d7ff;
     color: #FFFFFF;
-  
-    font-size: 30px;
+    font-size: 20px;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     border: 3px dashed #000000ff;
-    border-radius: 30px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+  justify-content: center;
+    
+    
 
 }
 
+
+
 input{
-    background-color:#a342d7ff;
-    color: #FFFFFF;
     text-shadow: 2px 2px 40px#FFB6C1;
-    font-size: 30px;
+    background-color:rgb(178, 107, 216);
+    font-size: 20px;
     margin: 10px;
     padding: 20px;
     border: 3px dashed #000000ff;
     border-radius: 30px;
+   
+}
+
+.quizImage{  display: block;
+  margin-left: auto;
+  margin-right: auto;}
+
+  .finish{  display: block;
+    margin-left: auto;
+    margin-right: auto;}
+
+.answer-div{text-align: center;}
+
+h1{text-align: center;
+  font-family: "Lobster";
 }
