--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
-body{background-color:#DE006F ;}
+body{background-color:#000000ff ;}
 
 button{ 
-    background-color:#a342d7ff;
+    background-color:#00aceeff;
     color: #FFFFFF;
     font-size: 20px;
     margin: 10px;
     padding: 10px;
-    border: 3px dashed #000000ff;
+    border: 3px groove #e00b75ff
+    ;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -21,19 +22,27 @@ button{
 
 
 input{
+  color: #fffefe  ;
     text-shadow: 2px 2px 40px#FFB6C1;
-    background-color:rgb(178, 107, 216);
+    background-color:#00aceeff;
     font-size: 20px;
     margin: 10px;
     padding: 20px;
-    border: 3px dashed #000000ff;
+    border: 3px groove #e00b75ff ;
     border-radius: 30px;
    
 }
 
+::placeholder {
+  color: #FFFFFF;
+  opacity: 1; /* Firefox */
+}
 .quizImage{  display: block;
   margin-left: auto;
-  margin-right: auto;}
+  margin-right: auto;
+  border: 3px groove #e00b75ff
+  ;
+  border-radius: 20px;}
 
   .finish{  display: block;
     margin-left: auto;
@@ -43,4 +52,8 @@ input{
 
 h1{text-align: center;
   font-family: "Lobster";
+  color:#FFFFFF;
+}
+
+h3{color: #FFFFFF;
 }
